test/Programs/InvalidTests/dupConsCons/dupConsCons.fst
data T = C

data U = C
